--- a/src/styles.css
+++ b/src/styles.css
@@ -1,31 +1,36 @@
 /* ========== HEADER & NAVIGATION ========== */
 header {
-  background-color: var(--clr-neutral-50);
   position: absolute;
   top: 0;
   left: 0;
   z-index: 6;
   width: 100%;
   padding: 0 2rem;
+  background-color: var(--clr-neutral-50);
 }
 
 nav {
-  height: 90px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  height: 90px;
 }
 
 .company-logo {
-  margin-right: 88px;
   max-width: 110px;
+  margin-right: 88px;
 }
 
 .nav-left,
 .nav-right button {
   display: flex;
   align-items: center;
+}
+
+.nav-left .booking-tab {
+  padding: 1.8125rem 0.8rem;
+  border-bottom: 5px solid transparent;
 }
 
 /* Toggle Button */
@@ -54,35 +59,36 @@ nav {
 
 /* ========== MOBILE NAVIGATION ========== */
 .mobile-nav {
-  opacity: 0;
-  transform: translateY(-20px);
-  max-height: 0;
-  overflow: hidden;
-  transition: all 0.3s ease-in-out;
-  border-radius: 0 0 4px 4px;
-  flex-direction: column;
-  background-color: white;
-  padding: 0 2rem;
-  gap: 1rem;
   position: absolute;
   top: 90px;
   left: 9.5%;
-  width: 80%;
   z-index: 5;
+  width: 80%;
+  max-height: 0;
+  overflow: hidden;
+  padding: 0 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background-color: white;
+  border-radius: 0 0 4px 4px;
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: all 0.3s ease-in-out;
 }
 
 .mobile-nav.show {
-  opacity: 1;
-  transform: translateY(0);
   max-height: 300px;
   padding: 1rem 2rem;
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .mobile-link {
-  color: var(--clr-neutral-200);
-  text-decoration: none;
   display: flex;
   padding: 0.875rem;
+  color: var(--clr-neutral-200);
+  text-decoration: none;
   transition: transform 0.3s;
 }
 
@@ -91,12 +97,12 @@ nav {
   transform: scale(1.01);
 }
 
-/* ========== MAIN SLIDER ========== */
+/* ========== MAIN SLIDER (HERO SECTION) ========== */
 main {
   position: relative;
+  z-index: 0;
   width: 100%;
   height: 100%;
-  z-index: 0;
 }
 
 main .swiper {
@@ -116,18 +122,18 @@ main .overlay::after {
 main .overlay img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   margin-top: 30px;
+  object-fit: cover;
 }
 
 main .img-overlay {
   position: absolute;
-  z-index: 5;
-  left: 50%;
   top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
-  text-align: center;
+  z-index: 5;
   margin-top: -2rem;
+  text-align: center;
 }
 
 main .img-overlay p,
@@ -150,42 +156,55 @@ main .img-overlay h2 {
 }
 
 /* ========== BOOKING SECTION ========== */
-.booking-tabs {
-  gap: 0.625rem;
-}
-
-.booking-tab {
-  border: none;
-  border-bottom: 3px solid transparent;
-  font-family: var(--font-family-base);
-  font-weight: var(--fw-semi-bold);
-  font-size: var(--fs-16);
-  background-color: transparent;
-  padding: 1.125rem 1rem;
-  color: var(--clr-neutral-200);
-  cursor: pointer;
-  transition: all 0.3s;
-}
-
-.booking-tab.active {
-  border-color: var(--clr-primary-400);
+#booking {
+  position: relative;
+  z-index: 1;
+  margin-top: -280px;
 }
 
 .booking-container {
   max-width: 1440px;
-  margin: auto;
   margin: 0 2em;
   padding: 0.825rem 2.25rem;
   background-color: var(--clr-neutral-50);
   border-radius: 16px;
 }
 
+/* Tabs */
+.booking-tabs {
+  display: flex;
+  gap: 0.625rem;
+}
+
+.booking-tab {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1.125rem 1rem;
+  border: none;
+  border-bottom: 3px solid transparent;
+  font-family: var(--font-family-base);
+  font-weight: var(--fw-semi-bold);
+  font-size: var(--fs-16);
+  color: var(--clr-neutral-200);
+  background-color: transparent;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.booking-tab.active {
+  border-color: var(--clr-primary-400);
+  font-weight: var(--fw-bold);
+}
+
+/* Forms */
+
 .booking-form {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-end;
   gap: 24px;
-  margin: 1.5rem 0;
+  margin: 1.5rem;
 }
 
 .booking-form .trip {
@@ -195,12 +214,12 @@ main .img-overlay h2 {
 .form-group {
   display: flex;
   flex-direction: column;
-  border-radius: 4px;
-  border: 1px solid var(--clr-neutral-100);
-  padding: 0.625rem 0.875rem;
   position: relative;
-  max-width: 19.625rem;
   height: 68px;
+  max-width: 19.625rem;
+  padding: 0.625rem 0.875rem;
+  border: 1px solid var(--clr-neutral-100);
+  border-radius: 4px;
 }
 
 .form-group label {
@@ -211,33 +230,78 @@ main .img-overlay h2 {
 
 .form-group input,
 .form-group select {
+  font-size: var(--fs-14);
+  color: var(--clr-neutral-200);
   border: none;
   outline: none;
-  font-size: var(--fs-14);
   background: none;
-  color: var(--clr-neutral-200);
 }
 
+/* Swap Icon */
 .swap-icon {
   position: absolute;
-  right: 10px;
   top: 32px;
+  right: 10px;
   font-weight: var(--fw-bold);
-  cursor: pointer;
+  font-size: var(--fs-16);
   color: var(--clr-neutral-200);
+  cursor: pointer;
 }
 
+/* Actions Buttons */
 .actions {
   display: flex;
   justify-content: flex-end;
+  gap: 10px;
   margin-top: 15px;
   max-height: 48px;
 }
 
-#booking {
-  margin-top: -280px;
+/* Input with Icons */
+.input-with-icon {
+  display: flex;
+  align-items: center;
   position: relative;
-  z-index: 1;
+}
+
+.input-with-icon input {
+  width: 100%;
+  padding: 0 1.75rem;
+  border: none;
+  background: none;
+  font-size: var(--fs-14);
+  color: var(--clr-neutral-200);
+}
+
+.input-calendar input {
+  padding: 0;
+}
+
+.input-with-icon select {
+  width: 100%;
+  padding: 0 2rem;
+}
+
+.input-icon {
+  position: absolute;
+  left: 0;
+  width: 20px;
+  height: 20px;
+  pointer-events: none;
+}
+
+.input-icon-right {
+  position: absolute;
+  right: 0;
+  width: 22px;
+  height: 22px;
+  pointer-events: none;
+}
+
+/* Hidden Utility - Specificity is important here! */
+.booking-form.hidden,
+.actions.hidden {
+  display: none;
 }
 
 /* ========== PLACES SECTION ========== */
@@ -246,26 +310,38 @@ main .img-overlay h2 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1.5rem;
   flex-wrap: wrap;
+  padding: 1.5rem;
   margin: 60px auto 0 auto;
   max-width: 1232px;
 }
 
 .places .flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
   max-width: 1232px;
   margin: auto;
 }
 
 .places-card {
   margin: 2rem;
-  align-items: center;
   max-width: 1232px;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
 }
 
 .places-content {
+  display: flex;
+  align-items: center;
   max-width: 390px;
   padding: 3rem;
+  flex-basis: 30%;
+  min-width: 280px;
 }
 
 .places-content img {
@@ -273,6 +349,7 @@ main .img-overlay h2 {
   height: 90px;
   margin-right: 1rem;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 /* ========== BOOKING BANNER SECTION ========== */
@@ -290,9 +367,7 @@ main .img-overlay h2 {
 .box {
   position: relative;
   overflow: hidden;
-  border-radius: 16px;
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-  cursor: pointer;
+  z-index: 1;
   flex: 1;
   height: 520px;
   min-width: 320px;
@@ -300,6 +375,9 @@ main .img-overlay h2 {
   display: flex;
   align-items: flex-end;
   justify-content: center;
+  border-radius: 16px;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -307,10 +385,10 @@ main .img-overlay h2 {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 1;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 1;
   transition: transform 0.4s ease-in-out;
 }
 
@@ -319,14 +397,14 @@ main .img-overlay h2 {
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 2;
   width: 100%;
   height: 100%;
-  z-index: 2;
+  padding: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  padding: 1.5rem;
   background: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.1));
   color: var(--clr-neutral-50);
   text-align: center;
@@ -355,6 +433,10 @@ main .img-overlay h2 {
 }
 
 /* Hover effects */
+.box:hover {
+  transform: translateY(-5px);
+}
+
 .box:hover .image-box {
   transform: scale(1.06);
 }
@@ -392,29 +474,33 @@ main .img-overlay h2 {
 .slider-reviews-container .swiper-slide {
   display: flex;
   justify-content: flex-start;
+  gap: 24px;
   height: 632px;
   width: 1232px;
-  gap: 24px;
 }
 
 .swiper-content {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border-radius: 16px;
-  /* border: 2px solid var(--clr-primary-400); */
-  box-shadow: 10px 16px 80px var(--clr-primary-400);
-  padding: 1.5rem;
   width: 100%;
   max-width: 430px;
   height: 100%;
   max-height: 586px;
+  padding: 1.5rem;
   background-color: #fff;
+  border-radius: 16px;
+  box-shadow: 10px 16px 80px var(--clr-primary-400);
   transition: transform 0.3s ease;
 }
 
 .swiper-content p {
   max-height: 38px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .swiper-content button {
@@ -426,34 +512,34 @@ main .img-overlay h2 {
 .swiper-content .star-icon {
   display: flex;
   justify-content: flex-start;
+  align-items: center;
   gap: 0.75rem;
   margin: 0 0 0.75rem 0;
-  align-items: center;
 }
 
 .swiper-content .flex {
+  display: flex;
   justify-content: flex-start;
   margin-top: 0.875rem;
 }
 
 .swiper-content-img img {
-  border-radius: 10px;
-  margin: auto;
-  margin-top: 1rem;
   width: 100%;
   max-width: 376px;
   max-height: 200px;
+  margin: auto;
+  margin-top: 1rem;
+  border-radius: 10px;
   object-fit: cover;
 }
 
 /* ========== SUBSCRIBE SECTION ========== */
-
 .subscribe-wrapper {
   width: 100%;
   max-width: 1440px;
-  border-radius: 26px;
-  background-color: var(--clr-primary-300);
   transform: translateY(40px);
+  background-color: var(--clr-primary-300);
+  border-radius: 26px;
 }
 
 .subscribe-wrapper .flex {
@@ -481,19 +567,21 @@ main .img-overlay h2 {
 }
 
 .subscribe-form input {
+  max-width: 420px;
+  padding: 18px;
+  font-size: var(--fs-16);
+  color: var(--clr-neutral-200);
   border: none;
   outline: none;
-  font-size: var(--fs-16);
-  padding: 18px;
-  max-width: 420px;
   background-color: var(--clr-neutral-50);
-  color: var(--clr-neutral-200);
 }
 
 .subscribe-form .btn-black {
-  color: var(--clr-neutral-50);
-  border-radius: 4px;
   padding: 1.125em 1.25em;
+  border-radius: 4px;
+  color: var(--clr-neutral-50);
+  font-weight: var(--fw-semi-bold);
+  font-size: var(--fs-14);
   background-color: var(--clr-neutral-200);
 }
 
@@ -501,6 +589,13 @@ main .img-overlay h2 {
 footer {
   margin-top: -80px;
   background-color: var(--clr-primary-400);
+}
+
+footer .flex-no-wrap {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: nowrap;
+  padding: 12rem 0 4rem 0;
 }
 
 .links {
@@ -514,19 +609,27 @@ footer {
 .links:nth-child(1),
 .links:nth-child(5),
 .links:nth-child(6) {
-  align-self: start;
-}
-
-footer .flex-no-wrap {
-  padding: 12rem 0 4rem 0;
-  justify-content: space-around;
+  align-self: flex-start;
 }
 
 footer .flex-no-wrap a {
   color: var(--clr-neutral-100);
+  text-decoration: none;
+  display: block;
+  padding: 0.2rem 0;
 }
 
 .socials-company-logo {
   max-width: 110px;
   margin-bottom: 1.25rem;
+}
+
+.social-links {
+  display: inline-flex;
+  gap: 0.75rem;
+}
+
+.social-links img {
+  width: 24px;
+  height: 24px;
 }
