--- a/src/landing-page/styles.css
+++ b/src/landing-page/styles.css
@@ -246,6 +246,7 @@ main .img-overlay h2 {
 
 .form-group input,
 .form-group select {
+  cursor: pointer;
   font-size: var(--fs-14);
   color: var(--clr-neutral-200);
   border: none;
@@ -291,6 +292,7 @@ main .img-overlay h2 {
 
 .input-calendar input {
   padding: 0;
+  cursor: pointer;
 }
 
 .input-with-icon select {
